// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleHeadline renders correctly with authors and links 1`] = `
<DocumentFragment>
  .emotion-4 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-1:not(:last-child) {
  margin-right: 10px;
}

.emotion-1:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<div>
    <ul
      class="emotion-4"
    >
      <li
        class="emotion-1"
      >
        <a
          aria-label="Posts by Jane Smith"
          class="emotion-0"
          data-author="Jane Smith"
          href="www.example.com"
          rel="author"
          title="Posts by Jane Smith"
        >
          Jane Smith
        </a>
      </li>
      <li
        class="emotion-1"
      >
        <a
          aria-label="Posts by John Smith"
          class="emotion-0"
          data-author="John Smith"
          href="www.example.com"
          rel="author"
          title="Posts by John Smith"
        >
          John Smith
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with authors and titles 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-2"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
        <span>
          , Author
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          John Smith
        </span>
        <span>
          , Other Author
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with authors, location, titles and links 1`] = `
<DocumentFragment>
  .emotion-4 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-1 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-1:not(:last-child) {
  margin-right: 10px;
}

.emotion-1:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #2F75D7;
}

.emotion-0:hover:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:active:not(:disabled) {
  color: #2F75D7;
}

.emotion-0:visited:not(:disabled) {
  color: #903D91;
}

<div>
    <ul
      class="emotion-4"
    >
      <li
        class="emotion-1"
      >
        <a
          aria-label="Posts by Jane Smith"
          class="emotion-0"
          data-author="Jane Smith"
          href="www.example.com"
          rel="author"
          title="Posts by Jane Smith"
        >
          Jane Smith
        </a>
        <span>
          , Author
        </span>
        <span>
          , London
        </span>
      </li>
      <li
        class="emotion-1"
      >
        <a
          aria-label="Posts by John Smith"
          class="emotion-0"
          data-author="John Smith"
          href="www.example.com"
          rel="author"
          title="Posts by John Smith"
        >
          John Smith
        </a>
        <span>
          , Other Author
        </span>
        <span>
          , London
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with multiple authors 1`] = `
<DocumentFragment>
  .emotion-3 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-3"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          John Smith
        </span>
      </li>
      <li
        class="emotion-0"
      >
        <span>
          Sam Smith
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`ArticleHeadline renders correctly with one authors 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin: 0;
  padding: 0;
  display: inline;
}

.emotion-0 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: -0.25px;
  -moz-letter-spacing: -0.25px;
  -ms-letter-spacing: -0.25px;
  letter-spacing: -0.25px;
  display: inline-block;
  position: relative;
}

.emotion-0:not(:last-child) {
  margin-right: 10px;
}

.emotion-0:not(:last-child):after {
  content: '';
  display: inline-block;
  position: absolute;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  top: 50%;
  right: -5px;
  width: 1px;
  height: 10px;
  background: black;
}

<div>
    <ul
      class="emotion-1"
    >
      <li
        class="emotion-0"
      >
        <span>
          Jane Smith
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
